# skills-inventory

./: .gitignore  DEPLOYMENT.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci-cd.yml
data/: skills_data.csv
frontend/: app.js  index.html  styles.css
infrastructure/terraform/: outputs.tf
lambda/: etl_job.py  requirements.txt
sagemaker/: train_clustering.py
src/: __init__.py
src/lambda_functions/: clustering.py
terraform/: iam.tf  main.tf  variables.tf
tests/unit/: test_clustering.py  test_etl_job.py
